--- a/styles.css
+++ b/styles.css
@@ -26,16 +26,26 @@ body {
 header {
     text-align: center;
     line-height: 2;
+    margin-top: 35px;
 }
 header h1 {
-    margin-bottom: 10px;
+    font-family: 'Lobster', cursive;
+    font-size: 2em;
+}
+header p {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-top: 1px dotted black;
+    border-bottom: 1px dotted black;
+    font-family: 'Libre Baskerville', serif;
+    font-size: 1em;
 }
 .choices {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 30px;
+    margin: 10px;
 }
 .choices label,
 .choices span,
@@ -43,22 +53,26 @@ header h1 {
     margin: 10px;
 }
 .choices span {
-    font-size: 1.15em;
-    font-weight: bold;
+    font-size: 1.5em;
+    font-family: 'Lobster', cursive;
 }
 .choices input {
     width: 100px;
 }
 .choices button {
-    margin: 20px;
+    margin: 10px;
     width: 10vw;
     height: 5vh;
     text-align: center;
     border-radius: 5px;
     font-size: 1rem;
+    font-family: 'Libre Baskerville', serif;
 }
 .choices h2 {
     margin: 10px;
+    font-weight: normal;
+    font-size: 1.5em;
+    font-family: 'Lobster', cursive;
 }
 .choices button:hover {
     background: black;
